# ooop_tasks

./: .gitignore  README.md
Workflow/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  Executor.cpp  Executor.h  FlowExcept.cpp  FlowExcept.h  Parser.cpp  Parser.h  Worker.cpp  Worker.h  Workflow.cpp  Workflow.h  main.cpp  shared_ptr.cpp  shared_ptr.h
life_game/: CMakeLists.txt  Command.cpp  Command.h  Executor.cpp  Game.cpp  Game.h  main.cpp
life_game/Tests/: test.cpp
life_game/game_except/: main_except.h
life_game_v2/: CMakeLists.txt  Cell.cpp  Cell.h  Command.cpp  Command.h  Executor.cpp  Field.cpp  Field.h  Game.cpp  Game.h
life_game_v2/Tests/: test.cpp
life_game_v2/game_except/: main_except.cpp
task0/task0a/: main.cpp  module2.cpp  module3.h
task0/task0b/: main.cpp  sort_strings.cpp  sort_strings.h
task0b/: CMakeLists.txt  main.cpp
tritset/: CMakeLists.txt  main.cpp  trit_pointer.cpp  trit_pointer.h  tritset.cpp  tritset.h  utilites.cpp  utilites.h
tritset_v2/: CMakeLists.txt  InputIterator.cpp  Readme.md.txt  Reference.cpp  Trit.cpp  Trit.h  Tritset.cpp  Tritset.h  main.cpp  utilites.cpp  utilites.h
tritset_v2/Tests/: test.cpp
